corrected file name

--- a/demo.html
+++ b/demo.html
@@ -264,7 +264,7 @@
 </div> <!-- closing #wrapper -->
 <div id="wrapper-footer">
 	<footer>
-		<p>Built with <a href="">VitaVis 0.9</a></p>
+		<p>Built with <a href="http://github.com/rlehnhof/VitaVis">VitaVis 0.9</a></p>
 	</footer>
 </div>
 </body>
